lots of bugs